# CDAX_Academy

./: .env.example  .env.production  .gitignore  DEPLOY.md  cookies_coord.txt  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  config.py  database.py  logs.py  main.py
app/api/: __init__.py  admin.py  auth.py  coordinador.py  cursos.py  foro.py  profesor.py  webhooks.py
app/gui/: __init__.py  rutas.py
app/gui/plantillas/: admision.html  aula.html  base.html  contacto.html  curso.html  dashboard.html  error.html  faq.html  foro.html  landing.html  leccion_contenido.html  login.html  pago_exitoso.html  privacidad.html  profesorado.html  programas.html
app/gui/plantillas/admin/: alumnos.html  curso_editar.html  dashboard.html  profesores.html  programas.html  suscripciones.html
app/gui/plantillas/componentes/: modal.html  navbar.html  sidebar_admin.html  sidebar_coordinador.html  sidebar_profesor.html
app/modelos/: __init__.py  config_bunny.py  curso.py  faq.py  foro.py  instructor.py  leccion.py  material.py  modulo.py  progreso.py  suscripcion.py  usuario.py
app/recursos/: __init__.py
app/repositorios/: __init__.py  curso_repositorio.py  faq_repositorio.py  foro_repositorio.py  instructor_repositorio.py  usuario_repositorio.py
app/servicios/: __init__.py  auth_servicio.py  bunny_cdn_servicio.py  bunny_stream_servicio.py  curso_servicio.py  faq_servicio.py  foro_servicio.py  instructor_servicio.py  pago_servicio.py
dep/: crear_usuario_demo.py
dep/dep/: __init__.py  depuracion.py
docker/: Dockerfile  nginx.conf
(+7 files in other folders)
